src/objects/CSM_QI_JiraLinkComment__c.object
<CustomObject>
    <description>Store Jira Comments related to JiraLink</description>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Body__c</fullName>
        <label>Body</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>JiraCommentCreatedDate__c</fullName>
        <label>JiraCommentCreatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JiraCommentId__c</fullName>
        <label>JiraCommentId</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>JiraCommentUpdatedDate__c</fullName>
        <label>JiraCommentUpdatedDate</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>JiraLink__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>JiraLink</label>
        <referenceTo>CSM_QI_JiraLink__c</referenceTo>
        <relationshipName>JiraLinkComments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Restricted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Restricted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>JIRA</fullName>
                </value>
                <value>
                    <fullName>CSM</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UpdateAuthor__c</fullName>
        <label>UpdateAuthor</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jira Comment</label>
    <nameField>
        <label>JiraLinkComment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jira Comments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>